# bytereverse

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-win.bat  version.h.in
bytereverse/: CMakeLists.txt
bytereverse/src/: main.cpp  reverse.h
cli/: CMakeLists.txt
cli/src/: main.cpp
cmake/: dependencies.cmake  version.h.in
include/: BatteryApp.h  FileDaemon.h  Fonts.h  GlobalResources.h  OptionsUI.h  Shortcut.h  TelegramBot.h  UUID.h  WorkerUI.h  _BaseUI.h  cereal.h  workerThread.h
resource/: resource.h  resource.rc
reverse/: CMakeLists.txt
reverse/include/: reverse.h
reverse/src/: reverse.cpp
src/: BatteryApp.cpp  GlobalResources.cpp  OptionsUI.cpp  Shortcut.cpp  TelegramBot.cpp  WorkerUI.cpp  _BaseUI.cpp  main.cpp  workerThread.cpp
